[package]
name = "ouou_dictation"
version = "0.1.0"
authors = ["OuOu2021 <1113117424@qq.com>"]
edition = "2021"
description = "A command-line program for self-help dictation supporting Chinese, Japanese and English."
readme = "README.md"
repository = "https://github.com/OuOu2021/ouou-dictation"
license = "MIT OR Apache-2.0"
keywords = ["dictate", "dictation", "Chinese", "English", "Japanese"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
tts = "0.26"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
lingua = { version = "1.6", default-features = false, features = [
    "japanese",
    "english",
    "chinese",
] }
language-tags = "0.3.2"
rand = "0.8.5"
indicatif = "0.17.9"
